include $(top_srcdir)/common.mk

noinst_LIBRARIES = libsokoban_core.a

libsokoban_core_a_SOURCES =
libsokoban_core_a_SOURCES += Actor.cpp
libsokoban_core_a_SOURCES += Movable.cpp
libsokoban_core_a_SOURCES += Box.cpp
libsokoban_core_a_SOURCES += Player.cpp
libsokoban_core_a_SOURCES += Platform.cpp
libsokoban_core_a_SOURCES += Wall.cpp
libsokoban_core_a_SOURCES += Board.cpp
