include $(top_srcdir)/common.mk

lib_LTLIBRARIES = gzc/games/sokoban/core/libsokoban_core.la

gzc_games_sokoban_core_libsokoban_core_la_SOURCES = Actor.cpp
gzc_games_sokoban_core_libsokoban_core_la_SOURCES += Movable.cpp
gzc_games_sokoban_core_libsokoban_core_la_SOURCES += Box.cpp
gzc_games_sokoban_core_libsokoban_core_la_SOURCES += Player.cpp
gzc_games_sokoban_core_libsokoban_core_la_SOURCES += Platform.cpp
gzc_games_sokoban_core_libsokoban_core_la_SOURCES += Wall.cpp
gzc_games_sokoban_core_libsokoban_core_la_SOURCES += Board.cpp

gzc_games_sokoban_core_libsokoban_core_la_LDFLAGS = -version-info $(GZC_SOKOBAN_CORE_VERSION)
